Reworks functions to allow for user grid selection

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <button id="changeGridBtn">Change Grid</button>
     <div id="squaresContainer"></div>
 </body>
 </html>
